--- a/notebook/experiments.ipynb
+++ b/notebook/experiments.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
        "9  Supermarket Type1          4710.5350  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,21 +302,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\asus\\AppData\\Local\\Temp\\ipykernel_19620\\3953948705.py:1: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "C:\\Users\\asus\\AppData\\Local\\Temp\\ipykernel_22456\\3953948705.py:1: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
       "\n",
       "\n",
       "  data['Item_Weight'].fillna(data['Item_Weight'].median(), inplace=True)\n",
-      "C:\\Users\\asus\\AppData\\Local\\Temp\\ipykernel_19620\\3953948705.py:2: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "C:\\Users\\asus\\AppData\\Local\\Temp\\ipykernel_22456\\3953948705.py:2: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
@@ -565,7 +565,7 @@
        "9  Supermarket Type1          4710.5350  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -714,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -728,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -768,9 +768,9 @@
       "- R2 Score: 0.6344\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 1037.6457\n",
-      "- Mean Absolute Error: 722.3315\n",
-      "- R2 Score: 0.6039\n",
+      "- Root Mean Squared Error: 1036.8488\n",
+      "- Mean Absolute Error: 721.9407\n",
+      "- R2 Score: 0.6045\n",
       "===================================\n",
       "\n",
       "\n",
@@ -781,22 +781,22 @@
       "- R2 Score: 1.0000\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 1469.1640\n",
-      "- Mean Absolute Error: 1014.4027\n",
-      "- R2 Score: 0.2059\n",
+      "- Root Mean Squared Error: 1498.3040\n",
+      "- Mean Absolute Error: 1031.5413\n",
+      "- R2 Score: 0.1740\n",
       "===================================\n",
       "\n",
       "\n",
       "Random Forest Regressor\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 427.5260\n",
-      "- Mean Absolute Error: 297.7888\n",
-      "- R2 Score: 0.9382\n",
+      "- Root Mean Squared Error: 426.8130\n",
+      "- Mean Absolute Error: 296.7249\n",
+      "- R2 Score: 0.9384\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 1083.7764\n",
-      "- Mean Absolute Error: 754.6882\n",
-      "- R2 Score: 0.5678\n",
+      "- Root Mean Squared Error: 1084.7291\n",
+      "- Mean Absolute Error: 753.5112\n",
+      "- R2 Score: 0.5671\n",
       "===================================\n",
       "\n",
       "\n",
@@ -815,14 +815,14 @@
       "\n",
       "AdaBoost Regressor\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 1186.9348\n",
-      "- Mean Absolute Error: 923.6760\n",
-      "- R2 Score: 0.5237\n",
+      "- Root Mean Squared Error: 1229.3298\n",
+      "- Mean Absolute Error: 984.4776\n",
+      "- R2 Score: 0.4891\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 1147.2453\n",
-      "- Mean Absolute Error: 893.2339\n",
-      "- R2 Score: 0.5158\n",
+      "- Root Mean Squared Error: 1188.8340\n",
+      "- Mean Absolute Error: 950.3888\n",
+      "- R2 Score: 0.4800\n",
       "===================================\n",
       "\n",
       "\n"
@@ -893,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1309,7 +1309,7 @@
        "GradientBoostingRegressor()"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1321,7 +1321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1456,7 +1456,7 @@
        "4               Tier 3  Supermarket Type3  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1468,7 +1468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1701,7 +1701,7 @@
        "[5 rows x 37 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1747,21 +1747,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\asus\\AppData\\Local\\Temp\\ipykernel_19620\\1514934752.py:1: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "C:\\Users\\asus\\AppData\\Local\\Temp\\ipykernel_22456\\1514934752.py:1: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
       "\n",
       "\n",
       "  test_data['Item_Weight'].fillna(test_data['Item_Weight'].median(), inplace=True)\n",
-      "C:\\Users\\asus\\AppData\\Local\\Temp\\ipykernel_19620\\1514934752.py:2: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "C:\\Users\\asus\\AppData\\Local\\Temp\\ipykernel_22456\\1514934752.py:2: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
@@ -1779,7 +1779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1789,7 +1789,7 @@
        "       3616.15654768, 1259.98283622])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1800,10 +1800,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pickle\n",
+    "with open('../artifacts/label_encoder.pkl', 'wb') as file:\n",
+    "    pickle.dump(le, file)\n",
+    "\n",
+    "# Save OneHot Encoder to .pkl\n",
+    "with open('../artifacts/onehot_encoder.pkl', 'wb') as file:\n",
+    "    pickle.dump(encoder, file)\n",
+    "\n",
+    "# Save Regressor Model to .pkl\n",
+    "with open('../artifacts/regressor_model.pkl', 'wb') as file:\n",
+    "    pickle.dump(GB, file)"
+   ]
   }
  ],
  "metadata": {
